change to object

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/u03/thanhhm/envs/research/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import plasma.search_engines as ses\n",
     "import pandas as pd\n",
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2.2401976585388184"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with plogging.Timer(print) as timer:\n",
     "    new_results = engine.run(query)\n",
@@ -86,327 +66,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'thương cẳng chân'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query[64:80]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plasma.functional as F\n",
+    "import plasma.logging as pl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = {\n",
+    "    1:{\n",
+    "        2: 3,\n",
+    "        3: 4,\n",
+    "    },\n",
+    "    2:{\n",
+    "        3: 4,\n",
+    "        4: 5,\n",
+    "    }\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>data_index</th>\n",
-       "      <th>original_text</th>\n",
-       "      <th>substring_matching_score</th>\n",
-       "      <th>word_coverage_score</th>\n",
-       "      <th>matched_len</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>query_start_index</th>\n",
-       "      <th>query_end_index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <th>42</th>\n",
-       "      <td>24754</td>\n",
-       "      <td>Tổn thương nông tác động nhiều vùng cơ thể</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"2\" valign=\"top\">44</th>\n",
-       "      <th>58</th>\n",
-       "      <td>24919</td>\n",
-       "      <td>Đa chấn thương cắt cụt chưa xác định</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>58</th>\n",
-       "      <td>24920</td>\n",
-       "      <td>Đa chấn thương đứt lìa không xác định</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52</th>\n",
-       "      <th>63</th>\n",
-       "      <td>22517</td>\n",
-       "      <td>Tổn thương kết mạc và xước giác mạc không có d...</td>\n",
-       "      <td>0.800000</td>\n",
-       "      <td>0.166667</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">60</th>\n",
-       "      <th>70</th>\n",
-       "      <td>23325</td>\n",
-       "      <td>Vết thương lách</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>23339</td>\n",
-       "      <td>Vết thương tụy</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>23397</td>\n",
-       "      <td>Vết thương thận</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.666667</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>23346</td>\n",
-       "      <td>Vết thương dạ dày</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>23353</td>\n",
-       "      <td>Vết thương ruột non</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.500000</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">64</th>\n",
-       "      <th>80</th>\n",
-       "      <td>24424</td>\n",
-       "      <td>Gãy nhiều vị trí xương cẳng chân</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.428571</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>24361</td>\n",
-       "      <td>Gãy xương cẳng chân, bao gồm cổ chân</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>24362</td>\n",
-       "      <td>Gẫy xương cẳng chân, bao gồm cổ chân</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>24441</td>\n",
-       "      <td>Gãy xương cẳng chân, phần chưa xác định</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>24442</td>\n",
-       "      <td>Gãy xương cẳng chân, phần không xác định</td>\n",
-       "      <td>0.888889</td>\n",
-       "      <td>0.375000</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">86</th>\n",
-       "      <th>107</th>\n",
-       "      <td>28554</td>\n",
-       "      <td>Người đi xe công nghiệp bị thương không phải d...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.357143</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>28579</td>\n",
-       "      <td>Người đi xe nông nghiệp bị thương không phải d...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.357143</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>28603</td>\n",
-       "      <td>Người đi xe xây dựng bị thương không phải do t...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.357143</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>28550</td>\n",
-       "      <td>Lái xe của xe công nghiệp bị thương không phải...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>28577</td>\n",
-       "      <td>Lái xe của xe nông nghiệp bị thương không phải...</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.333333</td>\n",
-       "      <td>21</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                   data_index  \\\n",
-       "query_start_index query_end_index               \n",
-       "0                 42                    24754   \n",
-       "44                58                    24919   \n",
-       "                  58                    24920   \n",
-       "52                63                    22517   \n",
-       "60                70                    23325   \n",
-       "                  70                    23339   \n",
-       "                  70                    23397   \n",
-       "                  70                    23346   \n",
-       "                  70                    23353   \n",
-       "64                80                    24424   \n",
-       "                  80                    24361   \n",
-       "                  80                    24362   \n",
-       "                  80                    24441   \n",
-       "                  80                    24442   \n",
-       "86                107                   28554   \n",
-       "                  107                   28579   \n",
-       "                  107                   28603   \n",
-       "                  107                   28550   \n",
-       "                  107                   28577   \n",
-       "\n",
-       "                                                                       original_text  \\\n",
-       "query_start_index query_end_index                                                      \n",
-       "0                 42                      Tổn thương nông tác động nhiều vùng cơ thể   \n",
-       "44                58                            Đa chấn thương cắt cụt chưa xác định   \n",
-       "                  58                           Đa chấn thương đứt lìa không xác định   \n",
-       "52                63               Tổn thương kết mạc và xước giác mạc không có d...   \n",
-       "60                70                                                 Vết thương lách   \n",
-       "                  70                                                  Vết thương tụy   \n",
-       "                  70                                                 Vết thương thận   \n",
-       "                  70                                               Vết thương dạ dày   \n",
-       "                  70                                             Vết thương ruột non   \n",
-       "64                80                                Gãy nhiều vị trí xương cẳng chân   \n",
-       "                  80                            Gãy xương cẳng chân, bao gồm cổ chân   \n",
-       "                  80                            Gẫy xương cẳng chân, bao gồm cổ chân   \n",
-       "                  80                         Gãy xương cẳng chân, phần chưa xác định   \n",
-       "                  80                        Gãy xương cẳng chân, phần không xác định   \n",
-       "86                107              Người đi xe công nghiệp bị thương không phải d...   \n",
-       "                  107              Người đi xe nông nghiệp bị thương không phải d...   \n",
-       "                  107              Người đi xe xây dựng bị thương không phải do t...   \n",
-       "                  107              Lái xe của xe công nghiệp bị thương không phải...   \n",
-       "                  107              Lái xe của xe nông nghiệp bị thương không phải...   \n",
-       "\n",
-       "                                   substring_matching_score  \\\n",
-       "query_start_index query_end_index                             \n",
-       "0                 42                               1.000000   \n",
-       "44                58                               1.000000   \n",
-       "                  58                               1.000000   \n",
-       "52                63                               0.800000   \n",
-       "60                70                               1.000000   \n",
-       "                  70                               1.000000   \n",
-       "                  70                               1.000000   \n",
-       "                  70                               1.000000   \n",
-       "                  70                               1.000000   \n",
-       "64                80                               0.888889   \n",
-       "                  80                               0.888889   \n",
-       "                  80                               0.888889   \n",
-       "                  80                               0.888889   \n",
-       "                  80                               0.888889   \n",
-       "86                107                              1.000000   \n",
-       "                  107                              1.000000   \n",
-       "                  107                              1.000000   \n",
-       "                  107                              1.000000   \n",
-       "                  107                              1.000000   \n",
-       "\n",
-       "                                   word_coverage_score  matched_len  \n",
-       "query_start_index query_end_index                                    \n",
-       "0                 42                          1.000000           42  \n",
-       "44                58                          0.375000           14  \n",
-       "                  58                          0.375000           14  \n",
-       "52                63                          0.166667           11  \n",
-       "60                70                          0.666667           10  \n",
-       "                  70                          0.666667           10  \n",
-       "                  70                          0.666667           10  \n",
-       "                  70                          0.500000           10  \n",
-       "                  70                          0.500000           10  \n",
-       "64                80                          0.428571           16  \n",
-       "                  80                          0.375000           16  \n",
-       "                  80                          0.375000           16  \n",
-       "                  80                          0.375000           16  \n",
-       "                  80                          0.375000           16  \n",
-       "86                107                         0.357143           21  \n",
-       "                  107                         0.357143           21  \n",
-       "                  107                         0.357143           21  \n",
-       "                  107                         0.333333           21  \n",
-       "                  107                         0.333333           21  "
+       "{1: {2: 3, 3: 4}, 2: {3: 4, 4: 5}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_results"
+    "b = F.ObjectInquirer(a)\n",
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.867813110351562e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pl.Timer() as timer:\n",
+    "    b[[1, 2]]\n",
+    "\n",
+    "print(timer.duration)"
    ]
   },
   {
