update logic of path inquirer for easier problem data registration

--- a/test.ipynb
+++ b/test.ipynb
@@ -55,20 +55,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.9085214138031006"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "with plogging.Timer(print) as timer:\n",
     "    new_results = engine.run(query)\n",
@@ -95,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,9 +112,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: {2: 3, 3: 4}, 2: {3: 4, 4: 5}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "b = F.ObjectInquirer(a)\n",
     "b"
@@ -133,12 +133,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7.3909759521484375e-06\n"
+     ]
+    }
+   ],
    "source": [
     "with pl.Timer() as timer:\n",
     "    b[[1, 2]]\n",
+    "\n",
+    "print(timer.duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.6689300537109375e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "with pl.Timer() as timer:\n",
+    "    a[1][2]\n",
     "\n",
     "print(timer.duration)"
    ]
