pass down registered type

--- a/test.ipynb
+++ b/test.ipynb
@@ -98,11 +98,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "class HEHE:\n",
+    "    haha = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "a = {\n",
-    "    1:{\n",
-    "        2: 3,\n",
-    "        3: 4,\n",
-    "    },\n",
+    "    1: HEHE(),\n",
     "    2:{\n",
     "        3: 4,\n",
     "        4: 5,\n",
@@ -112,16 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{1: {2: 3, 3: 4}, 2: {3: 4, 4: 5}}"
+       "{1: <__main__.HEHE object at 0x7fca85f1fd10>, 2: {3: 4, 4: 5}}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -133,40 +140,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7.3909759521484375e-06\n"
+      "5\n",
+      "3.647804260253906e-05\n"
      ]
     }
    ],
    "source": [
     "with pl.Timer() as timer:\n",
-    "    b[[1, 2]]\n",
+    "    print(b[[1, 'haha']])\n",
     "\n",
     "print(timer.duration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.6689300537109375e-06\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with pl.Timer() as timer:\n",
-    "    a[1][2]\n",
+    "    print(a[1].haha)\n",
     "\n",
     "print(timer.duration)"
    ]
