--- a/test.ipynb
+++ b/test.ipynb
@@ -98,15 +98,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "class HEHE:\n",
-    "    haha = 5"
+    "class HEHE(F.AutoPipe):\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.haha = 5"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: HEHE(\n",
+       " \thaha=5,\n",
+       " ),\n",
+       " 2: {3: 4, 4: 5}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "a = {\n",
     "    1: HEHE(),\n",
@@ -114,7 +131,8 @@
     "        3: 4,\n",
     "        4: 5,\n",
     "    }\n",
-    "}"
+    "}\n",
+    "a"
    ]
   },
   {
@@ -125,7 +143,9 @@
     {
      "data": {
       "text/plain": [
-       "{1: <__main__.HEHE object at 0x7fca85f1fd10>, 2: {3: 4, 4: 5}}"
+       "{1: HEHE(\n",
+       "\thaha=5,\n",
+       "), 2: {3: 4, 4: 5}}"
       ]
      },
      "execution_count": 4,
@@ -140,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +168,7 @@
      "output_type": "stream",
      "text": [
       "5\n",
-      "3.647804260253906e-05\n"
+      "3.528594970703125e-05\n"
      ]
     }
    ],
