fix dependency injection code

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -53,9 +53,10 @@
     "@factory.register('huhu')\n",
     "class HUHU(F.AutoPipe):\n",
     "\n",
-    "    def __init__(self, name):\n",
+    "    def __init__(self, name, age):\n",
     "        super().__init__()\n",
-    "        self.name = 3"
+    "        self.name = name\n",
+    "        self.age = age"
    ]
   },
   {
@@ -106,44 +107,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'huhu': HUHU(\n",
-       " \tname=3,\n",
+       " \tname='a',\n",
+       " \tage='loli',\n",
        " ),\n",
        " 'hehe': HEHE(\n",
        " \thuhu=HUHU(\n",
-       " \t\tname=3,\n",
+       " \t\tname='a',\n",
+       " \t\tage='loli',\n",
        " \t),\n",
        " ),\n",
        " 'hihi': HEHE(\n",
        " \thuhu=HUHU(\n",
-       " \t\tname=3,\n",
+       " \t\tname='a',\n",
+       " \t\tage='loli',\n",
        " \t),\n",
        " ),\n",
        " 'haha': HAHA(\n",
        " \thehe=HEHE(\n",
        " \t\thuhu=HUHU(\n",
-       " \t\t\tname=3,\n",
+       " \t\t\tname='a',\n",
+       " \t\t\tage='loli',\n",
        " \t\t),\n",
        " \t),\n",
        " \thuhu=HUHU(\n",
-       " \t\tname=3,\n",
+       " \t\tname='a',\n",
+       " \t\tage='loli',\n",
        " \t),\n",
        " )}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "objs = factory.inject_dependencies({'huhu': 1, 'hihi': 2})\n",
+    "objs = factory.inject_dependencies({'huhu': {'name': 'a', 'age': 'loli'}})\n",
     "objs"
    ]
   },
