--- a/tests/test_queue.ipynb
+++ b/tests/test_queue.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/u02/thanhhm/research-idea\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ../"
    ]
@@ -15,16 +23,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plasma.parallel_processing as pp"
+    "from plasma.parallel_processing import queues"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ProcessQueue(\n",
+       "\tpersistent=False,\n",
+       "\tn=2,\n",
+       ")"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "q = pp.ProcessQueue(n=2)\n",
+    "q = queues.ProcessQueue(n=2)\n",
     "q"
    ]
   },
@@ -40,9 +62,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "00000\n",
+      "0000100002\n",
+      "\n",
+      "0000400003\n",
+      "\n",
+      "0000500006\n",
+      "\n",
+      "0000700008\n",
+      "\n",
+      "0000900010\n",
+      "\n",
+      "0001100012\n",
+      "\n",
+      "0001300014\n",
+      "\n",
+      "0001500016\n",
+      "\n",
+      "0001700018\n",
+      "\n",
+      "00019\n"
+     ]
+    }
+   ],
    "source": [
     "q.register_callback(lambda x: f'{x:05d}')\n",
     "q.chain(print)\n",
