use wrapper for timer

--- a/tests/test_trainer.ipynb
+++ b/tests/test_trainer.ipynb
@@ -27,6 +27,7 @@
     "import torch.optim as opts\n",
     "import numpy as np\n",
     "import plasma.torch.training as training\n",
+    "import plasma.logging as plog\n",
     "\n",
     "from torch import Tensor\n",
     "from torch.utils.data import DataLoader\n",
@@ -88,52 +89,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "074416afb1a942dcb2d6e0bed1768d37",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "epoch:   0%|          | 0/2 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea07f4c495ed4da1a0eafe9e26a1dbe2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d9f1b57aa40459db916c56822c028df",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/10 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.run()"
    ]
