add generic to pipeline + refine trainer

--- a/tests/test_trainer.ipynb
+++ b/tests/test_trainer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,16 +27,14 @@
     "import torch.optim as opts\n",
     "import numpy as np\n",
     "import plasma.torch.training as training\n",
-    "import plasma.logging as plog\n",
     "\n",
     "from torch import Tensor\n",
-    "from torch.utils.data import DataLoader\n",
-    "from plasma.torch.training.prototypes.trainer import TrainerState"
+    "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,10 +49,10 @@
     "\n",
     "        self.max_epoch = 2\n",
     "\n",
-    "    def init_state(self) -> TrainerState:\n",
+    "    def init_state(self):\n",
     "        model = ptorch.nn.Linear(1, 1)\n",
     "\n",
-    "        return TrainerState(\n",
+    "        return training.TrainerState(\n",
     "            epoch=-1,\n",
     "            model=model,\n",
     "            optimizer=opts.SGD(model.parameters()),\n",
@@ -65,7 +63,7 @@
     "        ds = ptorch.data.AdhocData([1.0]*10, lambda x: x)\n",
     "        return ds.get_torch_loader(batch_size=1, workers=0)\n",
     "    \n",
-    "    def forward(self, state: TrainerState, i: int, inputs):\n",
+    "    def forward(self, state, i, inputs):\n",
     "        model = state.model\n",
     "        model.zero_grad()\n",
     "\n",
@@ -73,14 +71,17 @@
     "\n",
     "        return (y - inputs).mean()\n",
     "    \n",
-    "    def backward(self, state: TrainerState, bjective_val: Tensor):\n",
+    "    def backward(self, state, bjective_val):\n",
     "        bjective_val.backward()\n",
-    "        state.optimizer.step()"
+    "        state.optimizer.step()\n",
+    "    \n",
+    "    def finalize_iteration(self, state):\n",
+    "        state.scheduler.step()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
