revamp trainer interface

--- a/tests/test_trainer.ipynb
+++ b/tests/test_trainer.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,12 @@
     "import numpy as np\n",
     "import plasma.torch.training as training\n",
     "\n",
-    "from torch import Tensor\n",
     "from torch.utils.data import DataLoader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,39 +48,33 @@
     "\n",
     "        self.max_epoch = 2\n",
     "\n",
-    "    def init_state(self):\n",
     "        model = ptorch.nn.Linear(1, 1)\n",
-    "\n",
-    "        return training.TrainerState(\n",
-    "            epoch=-1,\n",
-    "            model=model,\n",
-    "            optimizer=opts.SGD(model.parameters()),\n",
-    "            scheduler=None,\n",
-    "        )\n",
+    "        self.model = model\n",
+    "        self.optimizer = opts.SGD(model.parameters())\n",
+    "        self.scheduler = None\n",
     "    \n",
     "    def init_train_loader(self) -> DataLoader:\n",
     "        ds = ptorch.data.AdhocData([1.0]*10, lambda x: x)\n",
     "        return ds.get_torch_loader(batch_size=1, workers=0)\n",
     "    \n",
-    "    def forward(self, state, i, inputs):\n",
-    "        model = state.model\n",
-    "        model.zero_grad()\n",
-    "\n",
-    "        y = model(inputs[np.newaxis].float())\n",
+    "    def forward(self, i, inputs):\n",
+    "        self.model.zero_grad()\n",
+    "        y = self.model(inputs[np.newaxis].float())\n",
     "\n",
     "        return (y - inputs).mean()\n",
     "    \n",
-    "    def backward(self, state, bjective_val):\n",
+    "    def backward(self, bjective_val):\n",
     "        bjective_val.backward()\n",
-    "        state.optimizer.step()\n",
+    "        self.optimizer.step()\n",
     "    \n",
-    "    def finalize_iteration(self, state):\n",
-    "        state.scheduler.step()"
+    "    def finalize_iteration(self):\n",
+    "        if self.scheduler is not None:\n",
+    "            self.scheduler.step()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +83,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30cf43b5c653498eb05dbcb6bb024b5b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "epoch:   0%|          | 0/2 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fa148e09542a444493fb5798fb8af256",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a7e9a5146244884aa32b8cd4d6e61dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.run()"
    ]
