small QoL change

--- a/tests/test_configs.ipynb
+++ b/tests/test_configs.ipynb
@@ -28,36 +28,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class HAHA(F.BaseConfigs):\n",
+    "\n",
+    "    class HEHE(F.BaseConfigs):\n",
+    "        haha = 8\n",
+    "    \n",
     "    haha = 5\n",
-    "    hehe = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "HAHA(\n",
-       "\thaha=5,\n",
-       "\thehe=4,\n",
-       ")"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "HAHA()"
+    "    hehe = 4\n",
+    "    huhu = HEHE()"
    ]
   },
   {
@@ -65,7 +47,62 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = HAHA()\n",
+    "a.haha = 4\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = F.SequentialPipe(w=HAHA())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Check(F.AutoPipe):\n",
+    "\n",
+    "    def run(self, x:int):\n",
+    "        return x + 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Check()"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = Check()\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a()"
+   ]
   }
  ],
  "metadata": {
