separate dependency injection

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -33,7 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "factory = meta.ObjectFactory()"
+    "factory = meta.ObjectFactory()\n",
+    "injector = meta.DependencyInjector(factory)"
    ]
   },
   {
@@ -149,7 +150,7 @@
     }
    ],
    "source": [
-    "objs = factory.inject_dependencies({'huhu': {'name': 'a', 'age': 'loli'}})\n",
+    "objs = injector.run({'name': 'a', 'age': 'loli'})\n",
     "objs"
    ]
   },
